--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,16 @@
 steps:
 
     - id: "Rodando docker-compose"
-      name: 'gcr.io/$PROJECT_ID/docker-compose'
+      name: 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
       args: ['-f','docker-compose.cloudbuild.yaml','up','-d']
     
-    # - id: "Rodando composer"
-    #   name: 'gcr.io/cloud-builders/docker'
-    #   args: ['exec','-t','app','composer','install']
-    
-    # - id: "Copiando .env"
-    #   name: 'gcr.io/cloud-builders/docker'
+    - id: "Rodando docker ps"
+      name: 'gcr.io/cloud-builders/docker'
+      args: ['ps']
+      
+      
+      # - id: "Copiando .env"
+     #   name: 'gcr.io/cloud-builders/docker'
     #   args: ['exec','-t','app','cp','.env.example','.env']
     
     # - id: "Rodando key:generate"
