--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,10 @@ steps:
       name: 'gcr.io/cloud-builders/docker'
       args: ['ps']
       
-      
+    - id: "Rodando composer"
+      name: 'gcr.io/cloud-builders/docker'
+      args: ['exec','-t','app','composer','install']  
+
       # - id: "Copiando .env"
      #   name: 'gcr.io/cloud-builders/docker'
     #   args: ['exec','-t','app','cp','.env.example','.env']
