--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -33,5 +33,14 @@ steps:
       args: ['build','-t','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA','-f','Dockerfile.prod','.']
 
     - id: "Pushing image"
-      name: 'grc.io/cloud-builders/docker'
+      name: 'gcr.io/cloud-builders/docker'
       args: ['push','gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA']
+
+    #- id: "Adjusting deployment file - K8s"
+    #  name: 'gcr.io/cloud-builders/gcloud'
+    #  entrypoint: '/bin/sh'
+    #  args:
+    #    - '-c'
+    #    - |
+    #      sed 's#img-app-deployment#gcr.io/$PROJECT_ID/app-laravel:$SHORT_SHA#g' .k8s/app/deployment.yaml > k8s/app/deployment-new.yaml;
+    #      cat k8s/app/deployment-new.yaml;
